# christer

./: README.md
Server/: .gitignore  CHANGELOG.md  README.md  Server.cabal  stack.yaml  wstest.js
Server/examples/: exampleCurrent  examplePost  examplePost2  new-user.sh
Server/src/: Auth.hs  Chat.hs  ChatClient.hs  Main.hs  Table.hs
Server/src/Types/: Suggestion.hs  Types.hs
Shitend/: Server.cabal
Shitend/old-src/: Table.hs
Shitend/old-src/Types/: Types.hs
Shitend/src/: API.hs  Auth.hs  ChatClient.hs  FileClient.hs  Filler.hs  Main.hs  Table.hs
Shitend/src/Types/: Suggestion.hs  Types.hs
christer/: README.md  pubspec.yaml
christer/android/app/: build.gradle
christer/android/app/src/debug/: AndroidManifest.xml
christer/android/app/src/main/: AndroidManifest.xml
christer/android/app/src/main/kotlin/com/example/christer/: MainActivity.kt
christer/ios/Runner/: Info.plist
christer/ios/Runner.xcodeproj/: project.pbxproj
christer/lib/: main.dart
christer/lib/BottomFragments/: ChatFragment.dart  ProfileFragment.dart  SwipeFragment.dart
christer/lib/data/: account_json.dart  chats_json.dart  default_params.dart  explore_json.dart  icons.dart  likes_json.dart
christer/lib/model/: content.dart  match.dart  message.dart  photo_model.dart  user_chat.dart
christer/lib/pages/: account_page.dart  chat_page.dart  edit_page.dart  explore_page.dart  image_picker.dart  login.dart  root_app.dart  settings_page.dart  user_chat_page.dart
christer/lib/persist/: persist.dart  user_context.dart
christer/lib/theme/: colors.dart
christer/linux/: CMakeLists.txt  my_application.cc
christer/macos/Runner.xcodeproj/: project.pbxproj
christer/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
christer/macos/Runner/Configs/: AppInfo.xcconfig
christer/test/: widget_test.dart
christer/web/: index.html  manifest.json
christer/windows/: CMakeLists.txt
christer/windows/runner/: Runner.rc  main.cpp
